first step signin with client
